--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,5 +10,6 @@
   {%- endif -%}
 
   {%- include custom-head.html -%}
+  <link href="https://vjs.zencdn.net/8.16.1/video-js.css" rel="stylesheet" />
   
 </head>
