--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -6,3 +6,38 @@
 {% endcomment %}    
 <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@{{ site.bootstrap.version }}/dist/css/bootstrap.min.css" rel="stylesheet" integrity="{{ site.bootstrap.integrity.css }}" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@{{ site.fontawesome.version }}/css/all.min.css" integrity="{{ site.fontawesome.integrity }}" crossorigin="anonymous"> -->
+<script src="https://d3js.org/d3.v7.min.js"></script>
+<script src="https://vjs.zencdn.net/8.16.1/video.min.js"></script>
+
+<style>
+  .audio-switch-wrapper {
+    padding-top: 10px;
+    width: 100%;
+  }
+  .audio-switch-inner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  svg {
+        background: #f9f9f9;
+        border: 1px solid #ccc;
+  }
+  line.link {
+    stroke: #999;
+    stroke-opacity: 0.6;
+    stroke-width: 2px;
+  }
+  circle.node {
+    stroke: #fff;
+    stroke-width: 1.5px;
+    cursor: pointer; /* So it's clear the nodes are clickable */
+  }
+
+  text.label {
+    pointer-events: none; /* Mouse clicks pass through to the circle */
+    font-size: 0.8rem;
+    text-anchor: middle;
+  }
+</style>
+
