--- a/_includes/nime2025_concept_map.html
+++ b/_includes/nime2025_concept_map.html
@@ -21,26 +21,26 @@
     { id: "Navigating Pitch", type: "concept" },
     { id: "Morphology", type: "concept" },
     { id: "High-Level Control", type: "concept" },
-    { id: "Direct / Dynamic Mapping", type: "concept" },
+    { id: "Direct Mapping", type: "concept" },
     { id: "Mapping Intermodulations", type: "concept" }
   ];
 
   const linksData = [
     { source: "Derailer", target: "Mapping Intermodulations" },
     { source: "Derailer", target: "Navigating Pitch" },
-    { source: "Derailer", target: "Direct / Dynamic Mapping" },
+    { source: "Derailer", target: "Direct Mapping" },
     { source: "Modular Synthesizer", target: "High-Level Control" },
     { source: "808 Snare", target: "Navigating Pitch" },
-    { source: "Loudness Compensation", target: "Direct / Dynamic Mapping" },
-    { source: "Classification", target: "Direct / Dynamic Mapping" },
+    { source: "Loudness Compensation", target: "Direct Mapping" },
+    { source: "Classification", target: "Direct Mapping" },
     { source: "Classification", target: "Mapping Intermodulations" },
     { source: "Timescale Morphing", target: "Morphology" },
     { source: "Timescale Morphing", target: "High-Level Control" },
-    { source: "Timescale Morphing", target: "Direct / Dynamic Mapping" },
+    { source: "Timescale Morphing", target: "Direct Mapping" },
     { source: "Latent Control", target: "High-Level Control" },
     { source: "Mult-Feature Timescale Morphing", target: "Morphology" },
     { source: "Mult-Feature Timescale Morphing", target: "High-Level Control" },
-    { source: "Mult-Feature Timescale Morphing", target: "Direct / Dynamic Mapping" }
+    { source: "Mult-Feature Timescale Morphing", target: "Direct Mapping" }
   ];
 
   // --------------------------------------------------
