style update and legend for d3 plot

--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -39,5 +39,10 @@
     font-size: 0.8rem;
     text-anchor: middle;
   }
+  .d3-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 </style>
 
